# green-se-summer-school-2026

./: .gitignore  README.md  requirements.txt
demos/: README.md  code_carbon.py  pytest_last_failed.py  test_temperature_conversion.py
demos/GreenAlgorithms/: GreenAlgorithms_results_IPSL.csv
demos/ctest_rerun_failed/: CMakeLists.txt  README.md  conversion.c  test_c2f.c  test_c2f_inverse.c  test_f2c.c  test_f2c_inverse.c
tests/: test_temperature_conversion.py
